--- a/application-prod.properties
+++ b/application-prod.properties
@@ -8,3 +8,4 @@ spring.datasource.password=Pravin@14
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size: 10
