--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -8,4 +8,6 @@ spring.datasource.password=Pravin@14
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.hikari.maximum-pool-size: 10
+#spring.datasource.hikari.maximum-pool-size: 10
+
+application.theme.color:dark
