--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -1,4 +1,6 @@
 
+#enable actuator
+management.endpoints.web.exposure.include=*
 # application-prod.properties
 # MySQL database configuration for production profile
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -8,6 +10,7 @@ spring.datasource.password=Pravin@14
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.hikari.maximum-pool-size: 10
 
-application.theme.color:dark
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.connection-timeout=60000
+application.theme.color=black
