--- a/book-service-dev.properties
+++ b/book-service-dev.properties
@@ -6,11 +6,36 @@
 #spring.datasource.username=sa
 #spring.datasource.password=12345
 
-spring.datasource.url=jdbc:h2:file:C:/Users/Admin/test
+#spring.datasource.url=jdbc:h2:file:C:/Users/Admin/test
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=12345
+
+
+# H2 Console settings
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# Hibernate settings
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
+#management.endpoints.web.exposure.include=*
+
+
+
+
+
+#enable actuator
+management.endpoints.web.exposure.include=*
+
+# DataSource settings: H2
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=12345
-
 
 # H2 Console settings
 spring.h2.console.enabled=true
@@ -19,7 +44,3 @@ spring.h2.console.path=/h2-console
 # Hibernate settings
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-
-
-management.endpoints.web.exposure.include=*
