--- a/book-service-dev.properties
+++ b/book-service-dev.properties
@@ -1,46 +1,20 @@
+#info.app.name = Store App
+#info.app.description = My Product Service
+#info.app.version = 1.0.0
 
-# DataSource settings: H2
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=12345
-
-#spring.datasource.url=jdbc:h2:file:C:/Users/Admin/test
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=12345
-
-
-# H2 Console settings
-
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
-# Hibernate settings
-
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-
-#management.endpoints.web.exposure.include=*
-
-
-
-
-
-#enable actuator
 management.endpoints.web.exposure.include=*
 
-# DataSource settings: H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:mphasisdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.password=1234
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# H2 Console settings
+#accessing the H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#spring.h2.console.setting.trace=true
+#spring.h2.console.setting.web-allow-others=true
 
-# Hibernate settings
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
